--- a/routes/new_product/test.html
+++ b/routes/new_product/test.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<form action="/upload" method="POST" enctype="multipart/form-data">
+<form action="/products" method="POST" enctype="multipart/form-data">
     <input type="file" name="image" />
     <button type="submit">Upload</button>
 </form>
