--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,12 +6,10 @@
   <link rel="icon" type="image/svg+xml" href="" />
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Dárky z pedigu"/>
-  <title>Dárky z pedigu - ručně pletené výrobky z pedigu</title>
+  <title>Dárky z pedigu</title>
 </head>
 
 <body>
-  <h1 style="visibility: hidden;">Darky z pedigu</h1>
   <div id="root"></div>
 
   <script type="module" src="/src/main.jsx"></script>
