--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,11 +5,22 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="" />
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
+  <link rel="stylesheet" href="indexstyle.css">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dárky z pedigu</title>
+  <title>Dárky z pedigu | vlastnoruční produkce výrobků z pedigu</title>
+  <meta name="description" content="Vlastnoruční výroba kvalitních produktů z pedigu z malé dílničky v podkrkonoší
+   | Košíky | Dekorace | Figurky | Hrníčky | Hodiny | Podnosy | Vázy | Ošatky" />
 </head>
 
 <body>
+  <h1 class="textyindex">Dárky z pedigu</h1>
+  <h2 class="textyindex">Dárky z pedigu</h2>
+  <h3 class="textyindex">Dárky z pedigu</h3>
+  <a class="textyindex" href="/">odkaz</a>
+  <a class="textyindex" href="/login">odkaz</a>
+  <a class="textyindex" href="/registration">odkaz</a>
+  
   <div id="root"></div>
 
   <script type="module" src="/src/main.jsx"></script>
