--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,21 +5,39 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="" />
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
+  <link rel="icon" href="public/logomalebez.png">
   <link rel="stylesheet" href="indexstyle.css">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dárky z pedigu | vlastnoruční produkce výrobků z pedigu</title>
-  <meta name="description" content="Vlastnoruční výroba kvalitních produktů z pedigu z malé dílničky v podkrkonoší
+  <meta name="description" content="Dárky z pedigu - Vlastnoruční výroba kvalitních produktů z pedigu z malé dílničky v podkrkonoší
    | Košíky | Dekorace | Figurky | Hrníčky | Hodiny | Podnosy | Vázy | Ošatky" />
 </head>
 
 <body>
-  <h1 class="textyindex">Dárky z pedigu</h1>
-  <h2 class="textyindex">Dárky z pedigu</h2>
-  <h3 class="textyindex">Dárky z pedigu</h3>
-  <a class="textyindex" href="/">odkaz</a>
-  <a class="textyindex" href="/login">odkaz</a>
-  <a class="textyindex" href="/registration">odkaz</a>
+  <h1 class="textyindex">Dárky z pedigu - vlastnoruční výrobky nadpis 1</h1>
+  <h2 class="textyindex">Dárky z pedigu - vlastnoruční výrobky nadpis 2</h2>
+  <h3 class="textyindex">Dárky z pedigu - vlastnoruční výrobky nadpis 3</h3>
+  <a class="textyindex" href="/">odkazhome</a>
+  <a class="textyindex" href="/login">odkazlog</a>
+  <a class="textyindex" href="/registration">odkazreg</a>
+  <a class="textyindex" href="/information">odkazinfo</a>
+  <a class="textyindex" href="/cart">odkazcart</a>
+  <a class="textyindex" href="/product">odkazproduct</a>
+  <a class="textyindex" href="/user_setting">userset</a>
+  <a class="textyindex" href="https://www.facebook.com/groups/442086279211061/">odkazfb</a>
+  <a class="textyindex" href="https://www.instagram.com/darkyzpedigu/">odkazig</a>
+
+  <p class="textyindex">Dárky z pedigu, výrobky z pedigu, pedig, přírodní materiál, ruční výroba, malá dílnička, instagram, facebook, email, tel. číslo, česká pošta, ppl, zásilkovna,
+    informace, uživatelský účet, registrace, přihlášení, košík, footer, navbar, |||| Dárky z pedigu, výrobky z pedigu, pedig, přírodní materiál, ruční výroba, malá dílnička, instagram, facebook, email, tel. číslo, česká pošta, ppl, zásilkovna,
+    informace, uživatelský účet, registrace, přihlášení, košík, footer, navbar, |||| Dárky z pedigu, výrobky z pedigu, pedig, přírodní materiál, ruční výroba, malá dílnička, instagram, facebook, email, tel. číslo, česká pošta, ppl, zásilkovna,
+    informace, uživatelský účet, registrace, přihlášení, košík, footer, navbar, |||| Dárky z pedigu, výrobky z pedigu, pedig, přírodní materiál, ruční výroba, malá dílnička, instagram, facebook, email, tel. číslo, česká pošta, ppl, zásilkovna,
+    informace, uživatelský účet, registrace, přihlášení, košík, footer, navbar, |||| Dárky z pedigu, výrobky z pedigu, pedig, přírodní materiál, ruční výroba, malá dílnička, instagram, facebook, email, tel. číslo, česká pošta, ppl, zásilkovna,
+    informace, uživatelský účet, registrace, přihlášení, košík, footer, navbar, |||| Dárky z pedigu, výrobky z pedigu, pedig, přírodní materiál, ruční výroba, malá dílnička, instagram, facebook, email, tel. číslo, česká pošta, ppl, zásilkovna,
+    informace, uživatelský účet, registrace, přihlášení, košík, footer, navbar, |||| Dárky z pedigu, výrobky z pedigu, pedig, přírodní materiál, ruční výroba, malá dílnička, instagram, facebook, email, tel. číslo, česká pošta, ppl, zásilkovna,
+    informace, uživatelský účet, registrace, přihlášení, košík, footer, navbar, |||| Dárky z pedigu, výrobky z pedigu, pedig, přírodní materiál, ruční výroba, malá dílnička, instagram, facebook, email, tel. číslo, česká pošta, ppl, zásilkovna,
+    informace, uživatelský účet, registrace, přihlášení, košík, footer, navbar, |||| Dárky z pedigu, výrobky z pedigu, pedig, přírodní materiál, ruční výroba, malá dílnička, instagram, facebook, email, tel. číslo, česká pošta, ppl, zásilkovna,
+    informace, uživatelský účet, registrace, přihlášení, košík, footer, navbar </p>
   
   <div id="root"></div>
 
