--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,17 +1,16 @@
 <!doctype html>
-<html lang="en">
+<html lang="cs">
 
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="" />
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
-  <link rel="icon" href="public/logomalebez.png">
   <link rel="stylesheet" href="indexstyle.css">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dárky z pedigu | vlastnoruční produkce výrobků z pedigu</title>
   <meta name="description" content="Dárky z pedigu - Vlastnoruční výroba kvalitních produktů z pedigu z malé dílničky v podkrkonoší
-   | Košíky | Dekorace | Figurky | Hrníčky | Hodiny | Podnosy | Vázy | Ošatky" />
+   | Košíky | Dekorace | Figurky | Hrníčky | Hodiny | Podnosy" />
 </head>
 
 <body>
@@ -28,17 +27,36 @@
   <a class="textyindex" href="https://www.facebook.com/groups/442086279211061/">odkazfb</a>
   <a class="textyindex" href="https://www.instagram.com/darkyzpedigu/">odkazig</a>
 
-  <p class="textyindex">Dárky z pedigu, výrobky z pedigu, pedig, přírodní materiál, ruční výroba, malá dílnička, instagram, facebook, email, tel. číslo, česká pošta, ppl, zásilkovna,
-    informace, uživatelský účet, registrace, přihlášení, košík, footer, navbar, |||| Dárky z pedigu, výrobky z pedigu, pedig, přírodní materiál, ruční výroba, malá dílnička, instagram, facebook, email, tel. číslo, česká pošta, ppl, zásilkovna,
-    informace, uživatelský účet, registrace, přihlášení, košík, footer, navbar, |||| Dárky z pedigu, výrobky z pedigu, pedig, přírodní materiál, ruční výroba, malá dílnička, instagram, facebook, email, tel. číslo, česká pošta, ppl, zásilkovna,
-    informace, uživatelský účet, registrace, přihlášení, košík, footer, navbar, |||| Dárky z pedigu, výrobky z pedigu, pedig, přírodní materiál, ruční výroba, malá dílnička, instagram, facebook, email, tel. číslo, česká pošta, ppl, zásilkovna,
-    informace, uživatelský účet, registrace, přihlášení, košík, footer, navbar, |||| Dárky z pedigu, výrobky z pedigu, pedig, přírodní materiál, ruční výroba, malá dílnička, instagram, facebook, email, tel. číslo, česká pošta, ppl, zásilkovna,
-    informace, uživatelský účet, registrace, přihlášení, košík, footer, navbar, |||| Dárky z pedigu, výrobky z pedigu, pedig, přírodní materiál, ruční výroba, malá dílnička, instagram, facebook, email, tel. číslo, česká pošta, ppl, zásilkovna,
-    informace, uživatelský účet, registrace, přihlášení, košík, footer, navbar, |||| Dárky z pedigu, výrobky z pedigu, pedig, přírodní materiál, ruční výroba, malá dílnička, instagram, facebook, email, tel. číslo, česká pošta, ppl, zásilkovna,
-    informace, uživatelský účet, registrace, přihlášení, košík, footer, navbar, |||| Dárky z pedigu, výrobky z pedigu, pedig, přírodní materiál, ruční výroba, malá dílnička, instagram, facebook, email, tel. číslo, česká pošta, ppl, zásilkovna,
-    informace, uživatelský účet, registrace, přihlášení, košík, footer, navbar, |||| Dárky z pedigu, výrobky z pedigu, pedig, přírodní materiál, ruční výroba, malá dílnička, instagram, facebook, email, tel. číslo, česká pošta, ppl, zásilkovna,
-    informace, uživatelský účet, registrace, přihlášení, košík, footer, navbar </p>
-  
+  <p class="textyindex"> Dárky z pedigu, výrobky z pedigu. pedig, přírodní materiál, ruční výroba, malá dílnička,
+    instagram, facebook, email, tel. číslo, česká pošta, ppl, zásilkovna,
+    informace, uživatelský účet, registrace. přihlášení, košík, footer, navbar, |||| Dárky z pedigu, výrobky z pedigu,
+    pedig. přírodní materiál, ruční výroba, malá dílnička, instagram, facebook, email, tel. číslo, česká pošta, ppl,
+    zásilkovna,
+    informace. uživatelský účet, registrace, přihlášení, košík, footer, navbar. |||| Dárky z pedigu, výrobky z pedigu,
+    pedig, přírodní materiál, ruční výroba, malá dílnička. instagram, facebook, email, tel. číslo, česká pošta, ppl,
+    zásilkovna,
+    informace, uživatelský účet, registrace, přihlášení, košík, footer. navbar, |||| Dárky z pedigu, výrobky z pedigu,
+    pedig, přírodní materiál, ruční výroba. malá dílnička, instagram, facebook, email, tel. číslo, česká pošta, ppl,
+    zásilkovna,
+    informace, uživatelský účet, registrace. přihlášení, košík, footer, navbar </p>
+
+  <p class="textyindex">Dárky z pedigu, výrobky z pedigu, pedig, přírodní materiál, ruční výroba, malá dílnička.
+    instagram, facebook, email, tel. číslo, česká pošta, ppl, zásilkovna,
+    informace, uživatelský účet, registrace, přihlášení. košík, footer, navbar,</p>
+  <p class="textyindex">Dárky z pedigu, výrobky z pedigu, pedig, přírodní materiál, ruční výroba. malá dílnička.
+    instagram, facebook, email, tel. číslo, česká pošta, ppl, zásilkovna,
+    informace, uživatelský účet, registrace, přihlášení. košík, footer, navbar,</p>
+  <p class="textyindex">Dárky z pedigu, výrobky z pedigu, pedig, přírodní materiál, ruční výroba, malá dílnička.
+    instagram, facebook, email, tel. číslo, česká pošta. ppl, zásilkovna,
+    informace, uživatelský účet, registrace, přihlášení, košík, footer, navbar,</p>
+  <p class="textyindex">Dárky z pedigu, výrobky z pedigu, pedig, přírodní materiál, ruční výroba, malá dílnička.
+    instagram, facebook, email, tel. číslo, česká pošta, ppl, zásilkovna,
+    informace, uživatelský účet, registrace, přihlášení. košík, footer, navbar,</p>
+  <p class="textyindex">Dárky z pedigu, výrobky z pedigu, pedig, přírodní materiál, ruční výroba, malá dílnička,
+    instagram, facebook, email, tel. číslo, česká pošta, ppl, zásilkovna,
+    informace, uživatelský účet. registrace, přihlášení, košík, footer, navbar, Dárky z pedigu | vlastnoruční produkce
+    výrobků z pedigu</p>
+
   <div id="root"></div>
 
   <script type="module" src="/src/main.jsx"></script>
