--- a/frontend/index.html
+++ b/frontend/index.html
@@ -30,32 +30,38 @@
   <p class="textyindex"> Dárky z pedigu, výrobky z pedigu. pedig, přírodní materiál, ruční výroba, malá dílnička,
     instagram, facebook, email, tel. číslo, česká pošta, ppl, zásilkovna,
     informace, uživatelský účet, registrace. přihlášení, košík, footer, navbar, |||| Dárky z pedigu, výrobky z pedigu,
-    pedig. přírodní materiál, ruční výroba, malá dílnička, instagram, facebook, email, tel. číslo, česká pošta, ppl,
+    pedig. přírodní materiál, ruční výroba, malá dílničkaa, instagram, facebook, email, tel. číslo, česká pošta, ppl,
     zásilkovna,
     informace. uživatelský účet, registrace, přihlášení, košík, footer, navbar. |||| Dárky z pedigu, výrobky z pedigu,
     pedig, přírodní materiál, ruční výroba, malá dílnička. instagram, facebook, email, tel. číslo, česká pošta, ppl,
     zásilkovna,
-    informace, uživatelský účet, registrace, přihlášení, košík, footer. navbar, |||| Dárky z pedigu, výrobky z pedigu,
-    pedig, přírodní materiál, ruční výroba. malá dílnička, instagram, facebook, email, tel. číslo, česká pošta, ppl,
+    informace, uživatelský účet, registrace, přihlášení, košík, footer. navbarr, |||| Dárky z pedigu, výrobky z pedigu,
+    pedig, přírodní materiál, ruční výrobaa. malá dílnička, instagram, facebook, email, tel. číslo, česká pošta, ppl,
     zásilkovna,
-    informace, uživatelský účet, registrace. přihlášení, košík, footer, navbar </p>
+    informace, uživatelský účet, registrace. přihlášeníí, košík, footer, navbar </p>
 
   <p class="textyindex">Dárky z pedigu, výrobky z pedigu, pedig, přírodní materiál, ruční výroba, malá dílnička.
-    instagram, facebook, email, tel. číslo, česká pošta, ppl, zásilkovna,
+    instagram, facebookk, email, tel. číslo, česká pošta, ppl, zásilkovna,
     informace, uživatelský účet, registrace, přihlášení. košík, footer, navbar,</p>
   <p class="textyindex">Dárky z pedigu, výrobky z pedigu, pedig, přírodní materiál, ruční výroba. malá dílnička.
-    instagram, facebook, email, tel. číslo, česká pošta, ppl, zásilkovna,
+    instagram, facebook, email, tel. číslo, česká pošta, ppl, zássilkovna,
     informace, uživatelský účet, registrace, přihlášení. košík, footer, navbar,</p>
-  <p class="textyindex">Dárky z pedigu, výrobky z pedigu, pedig, přírodní materiál, ruční výroba, malá dílnička.
+  <p class="textyindex">Dárky z pedigu, výrobky z pedigu, pedig, přírodnní materiál, ruční výroba, malá dílnička.
     instagram, facebook, email, tel. číslo, česká pošta. ppl, zásilkovna,
     informace, uživatelský účet, registrace, přihlášení, košík, footer, navbar,</p>
-  <p class="textyindex">Dárky z pedigu, výrobky z pedigu, pedig, přírodní materiál, ruční výroba, malá dílnička.
-    instagram, facebook, email, tel. číslo, česká pošta, ppl, zásilkovna,
+  <p class="textyindex">Dárky z pedigu, výrobky z pedigu, pedig, přírodní materiál, ruční výrobaa, malá dílnička.
+    instagram, facebook, emaill, tel. číslo, česká pošta, ppl, zásilkovna,
     informace, uživatelský účet, registrace, přihlášení. košík, footer, navbar,</p>
   <p class="textyindex">Dárky z pedigu, výrobky z pedigu, pedig, přírodní materiál, ruční výroba, malá dílnička,
     instagram, facebook, email, tel. číslo, česká pošta, ppl, zásilkovna,
-    informace, uživatelský účet. registrace, přihlášení, košík, footer, navbar, Dárky z pedigu | vlastnoruční produkce
+    informace, uživatelský účet. rregistrace, přihlášení, košík, footer, navbar, Dárky z pedigu | vlastnoruční produkce
     výrobků z pedigu</p>
+
+    <a class="textyindex" href="https://imp.up.railway.app/">Dárky z pedigu</a> 
+    <a class="textyindex" href="https://imp.up.railway.app/">Pedig dárek</a> 
+    <a class="textyindex" href="https://imp.up.railway.app/">zpět</a> 
+    <a class="textyindex" href="https://imp.up.railway.app/">zpátky</a> 
+    <a class="textyindex" href="https://imp.up.railway.app/">domů</a> 
 
   <div id="root"></div>
 
