--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <div id="root"></div>
+    <div style="min-height: 100vh;" id="root"></div>
 
     <script type="module" src="/src/main.jsx"></script>
     <script
